--- a/bloggy/package.json
+++ b/bloggy/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.15",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.32.0",
     "next": "14.1.3",
